<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_delete_book" android:title="@string/action_delete_book"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_update_data" android:title="@string/action_update_data"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_dump" android:title="@string/action_db_dump"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear" android:title="@string/action_db_clear"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_test_seat" android:title="@string/action_test_seat"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
